ScientificCouncilCurricularPlanManagementBackingBean --> DegreeCurricularPlanManagementBackingBean